<resources>
    <string name="app_name">裂物</string>
    <string name="newwork_err">网络未连接!</string>
    <string name="newwork_request_err_401">登录已过期,请重新登录!</string>
    <string name="newwork_request_err_403">禁止访问!</string>
    <string name="newwork_request_err_404">链接错误</string>
    <string name="newwork_request_err_500">服务器内部错误!</string>
    <string name="newwork_request_err_503">服务器升级中!</string>
    <string name="permission_title">权限设置</string>
    <string name="permission_photo2dStorage">当前应用缺少必要权限。\n请点击\"设置\"-\"权限\"-打开【相机】、【读写文件】权限。</string>
    <string name="permission_photo">当前应用缺少必要权限。\n请点击\"设置\"-\"权限\"-打开【相机】权限。</string>
    <string name="permission_device">当前应用缺少必要权限。\n请点击\"设置\"-\"权限\"-打开【设备】权限。</string>
    <string name="permission_req_location_camera">申请相机、位置权限</string>
    <string name="permission_dialog">当前应用缺少必要权限。\n请点击\"设置\"-\"权限\"-打开【相机】、【位置】权限。</string>
    <string name="permission_req_photo2dStorage">申请相机、读写权限</string>
    <string name="permission_req_photo">申请相机权限</string>
    <string name="permission_req_device">申请设备权限</string>
    <string name="permission_ok">去设置</string>
    <string name="permission_cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="pass_not_empty">密码不能为空</string>
    <string name="isNot_phone">手机号格式不正确</string>
    <string name="pass_length">密码必须为6–20位数字+字母</string>
    <string name="login">登录</string>
    <string name="login_message">新用户登录直接生成账号</string>
    <string name="user_agreement">登录默认同意</string>
    <string name="send_verification_code_to">验证码已发送至</string>
    <string name="again_get">重新获取</string>
    <string name="binging_phone">绑定手机号</string>
    <string name="binding_message">微信账号和手机账号都可以登录</string>
    <string name="user_agreement_tv">用户协议</string>
    <string name="my_shopping_trolley">我的购物车</string>
    <string name="copy_reader_text">编辑设计</string>
    <string name="confirm_order">确认订单</string>
    <string name="substitute">替换</string>
    <string name="default_fetch_address">默认和取件地址相同</string>
    <string name="indent_num_text">订单号：</string>
    <string name="pay">支付 ¥</string>
    <string name="apply_after">申请售后</string>
    <string name="apply_after_title">申请售后原因</string>
    <string name="apply_after_info">请描述申请售后服务的具体原因，文字、图片必须填写，还可上传最多5张图片哦～</string>
    <string name="apply_after_remind">提交服务单后，售后专员可能与您电话沟通，请保持手机畅通</string>
    <string name="appointment_expressage">预约快递上门取件</string>
    <string name="pay_success">支付成功</string>
    <string name="take_code">取件码: </string>
    <string name="edit_address">编辑地址</string>
    <string name="name">姓名</string>
    <string name="save">保存</string>
    <string name="set_default">设为默认</string>
    <string name="address_info">详细地址</string>
    <string name="area">区</string>
    <string name="city">市</string>
    <string name="province">省</string>
    <string name="phone">电话</string>
    <string name="distribution_address">配送地址</string>
    <string name="default_tv">默认</string>
    <string name="compile">编辑</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_message">您的意见，对我们非常珍贵。</string>
    <string name="submit">提交</string>
    <string name="shopping_car">我的购物车</string>
    <string name="load_data_refresh">加载中...</string>
    <string name="order_info">订单详情</string>
    <string name="after_state">售后状态</string>
    <string name="add_address">添加地址</string>
    <string name="my_order">我的订单</string>
    <string name="my_address">我的地址</string>
    <string name="customer_service">客服电话</string>
    <string name="_021_56669882">021-56669882</string>
    <string name="logout">退出登录</string>
    <string name="delete_address">删除地址</string>
    <string name="name_not_null">姓名不能为空</string>
    <string name="num_not_null">手机号不能为空</string>
    <string name="province_not_null">省不能为空</string>
    <string name="city_not_null">城市不能为空</string>
    <string name="area_not_null">区域不能为空</string>
    <string name="address_not_null">详细地址不能为空</string>
    <string name="num_not_sure">请输入正确的手机号</string>
    <string name="all_choose">全选  合计：¥</string>
    <string name="go_to_pay">去付款: </string>
    <string name="money_icon">¥</string>
    <string name="add_to_shopping_car">加入购物车</string>
    <string name="order_num_tv">订单号:</string>
    <string name="continue_pay">继续付款</string>
    <string name="cancel_order">取消订单</string>
    <string name="place_order">下单时间：</string>
    <string name="order_num">订单编号：</string>
    <string name="appointment_time">预约取件时间（两小时内）</string>
    <string name="basics_shoe">基础款鞋</string>
    <string name="craftsman">匠人</string>
    <string name="effect_picture">效果图</string>
    <string name="modification_tel">修改手机号</string>
    <string name="binding_new_phone">绑定新手机号</string>
    <string name="binding">绑定</string>
    <string name="allow_permissions">应用缺少相应权限，请先获取权限</string>
</resources>