<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.jinxun.hunting_goods.presentation.activity.BindingPhoneActivity.Presenter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.jinxun.hunting_goods.presentation.activity.BindingPhoneActivity">

        <com.jinxun.hunting_goods.weight.NavigationTopBar
            android:id="@+id/binding_top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y96"></com.jinxun.hunting_goods.weight.NavigationTopBar>

        <LinearLayout
            android:id="@+id/login_message_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/binding_top_bar"
            android:layout_marginStart="@dimen/x48"
            android:layout_marginTop="@dimen/y90"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binging_phone"
                android:textColor="@color/black"
                android:textSize="@dimen/x48"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y40"
                android:text="@string/binding_message"
                android:textColor="@color/silver"
                android:textSize="@dimen/x28" />

            <EditText
                android:id="@+id/phone_num_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x48"
                android:layout_marginTop="@dimen/y130"
                android:background="@null"
                android:hint="请输入手机号"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/x32" />

            <View
                android:id="@+id/line_phone"
                style="@style/horizontal_F0_line"
                android:layout_marginEnd="@dimen/x48"
                android:layout_marginTop="@dimen/x49" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/user_agreement_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/login_message_root"
            android:layout_marginEnd="@dimen/x50"
            android:onClick="@{presenter.onClick}"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y40"
                android:text="@string/user_agreement"
                android:textColor="#343437"
                android:textSize="@dimen/x24" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y40"
                android:src="@mipmap/user_agreement" />
        </LinearLayout>


        <TextView
            android:id="@+id/login_btn"
            android:layout_width="@dimen/x650"
            android:layout_height="@dimen/y88"
            android:layout_below="@+id/user_agreement_root"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y88"
            android:background="@color/black"
            android:gravity="center"
            android:onClick="@{presenter.onClick}"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/x28" />

    </RelativeLayout>
</layout>
