<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_user_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y63"
        android:src="@mipmap/use_photo_bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_user_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y14"
            android:text="13000000000"
            android:textColor="@color/black"
            android:textSize="@dimen/x32"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/main_user_change_num_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/x10"
            android:src="@mipmap/edit_icon" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y127"
        android:layout_marginEnd="@dimen/x26"
        android:layout_marginStart="@dimen/x44"
        android:layout_marginTop="@dimen/y20">

        <TextView
            android:id="@+id/shopping_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/shopping_car"
            android:textColor="@color/black"
            android:textSize="@dimen/x28"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/into_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:layout_below="@+id/shopping_car"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/line_e6" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y127"
        android:layout_marginEnd="@dimen/x26"
        android:layout_marginStart="@dimen/x44"
        android:layout_marginTop="@dimen/y20">

        <TextView
            android:id="@+id/my_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_order"
            android:textColor="@color/black"
            android:textSize="@dimen/x28"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/into_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:layout_below="@+id/my_order"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/line_e6" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y127"
        android:layout_marginEnd="@dimen/x26"
        android:layout_marginStart="@dimen/x44"
        android:layout_marginTop="@dimen/y20">

        <TextView
            android:id="@+id/my_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_address"
            android:textColor="@color/black"
            android:textSize="@dimen/x28"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/into_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:layout_below="@+id/my_address"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/line_e6" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y127"
        android:layout_marginEnd="@dimen/x26"
        android:layout_marginStart="@dimen/x44"
        android:layout_marginTop="@dimen/y20">

        <TextView
            android:id="@+id/customer_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/customer_service"
            android:textColor="@color/black"
            android:textSize="@dimen/x28"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_021_56669882"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:layout_below="@+id/customer_service"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/line_e6" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y127"
        android:layout_marginEnd="@dimen/x26"
        android:layout_marginStart="@dimen/x44"
        android:layout_marginTop="@dimen/y20">

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="反馈意见"
            android:textColor="@color/black"
            android:textSize="@dimen/x28"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/into_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:layout_below="@+id/feedback"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/line_e6" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x44"
        android:layout_marginTop="@dimen/y36"
        android:text="@string/logout"
        android:textColor="@color/silver"
        android:textSize="@dimen/x26" />
</LinearLayout>